--- a/index.css
+++ b/index.css
@@ -1,18 +1,18 @@
 	html{
-		background-color: --tg-theme-bg-color;
+		background-color: var(--tg-theme-bg-color);
 
 	}
 	body{
 		font-size: 2em;
-		background-color: --tg-theme-bg-color;
+		background-color: var(--tg-theme-bg-color);
 	}	
 	.specs .btn:hover{
-		color: --tg-theme-text-color;
-		border-color: --tg-theme-text-color;
+		color:  var(--tg-theme-text-color);
+		border-color:  var(--tg-theme-text-color);
 	}
 	.main{
-		background-color: --tg-theme-bg-color;
-		color:--tg-theme-text-color;
+		background-color: var(--tg-theme-bg-color);
+		color: var(--tg-theme-text-color);
 		height: 100%;
 		/*border-bottom: 2pt solid #2E3532;
 		border-color: #ff0000;
@@ -21,7 +21,7 @@
 	.header{
 		margin: 0;
 		background-color: #2E3532;
-		color:--tg-theme-text-color;
+		color: var(--tg-theme-text-color);
 		border-radius: 0pt 0pt 10pt 10pt;
 		position: fixed;
 		display:flex;
@@ -33,7 +33,7 @@
 	.header .btn{
 		background-color: #2E3532;
 		text-decoration: none;
-		color:--tg-theme-text-color;
+		color: var(--tg-theme-text-color);
 		border-radius: 0;
 		/*border-color: red;*/
 	}
@@ -42,7 +42,7 @@
 		align-items: center;
 		justify-content: space-between;
 		text-align: center;
-		color:--tg-theme-text-color;
+		color: var(--tg-theme-text-color);
 		text-decoration: none;
 /*		text-decoration-style: underline;*/
 		text-decoration-color: #D2D4C8;
@@ -52,7 +52,7 @@
 	}
 	.mylogo:hover{
 		transition: 0.2s;
-		color:--tg-theme-text-color;
+		color: var(--tg-theme-text-color);
 		border:1pt solid #8B2635;
 		border-radius:0;
 		padding:0.2em;
@@ -67,13 +67,13 @@
 	}
 
 	.specs .btn{
-		color:--tg-theme-text-color;
+		color: var(--tg-theme-text-color);
 		justify-content: space-between;
 	}
 
 	.possible{
-		background-color: --tg-theme-button-color;
-		color:--tg-theme-text-color;
+		background-color: var(--tg-theme-button-color);
+		color: var(--tg-theme-text-color);
 		height: 100%;
 	}
 	.cases_links {
@@ -91,6 +91,6 @@
 	}
 
 	.cases_links .btn:hover{
-		color:--tg-theme-button-text-color;
+		color: var(--tg-theme-button-text-color);
 	
 	}
