--- a/index.css
+++ b/index.css
@@ -48,13 +48,17 @@
 	.cases_links {
 		margin-top: 1em;
 		margin-bottom: 2em;
+		display: flex;	
+		flex-direction: column;
 	}
 
 	.cases_links .btn{
+		align-self: stretch;
+		word-wrap: break-word;
 		padding-top: 1em;
 		padding-bottom: 1em;
-		display: block;
-		justify-content: center;
+		text-align: center;
+		margin: 0.5em;
 		margin-bottom: 1em;
 		color:  var(--tg-theme-text-color);
 		border-color:  var(--tg-theme-text-color);
