--- a/random.css
+++ b/random.css
@@ -18,6 +18,7 @@
 
 .random_form > input{
 	background-color: var(--tg-theme-secondary-bg-color);
+	color: var(--tg-theme-text-color);
 	margin-top: 1em;
 	margin-bottom: 1em;
 }
