--- a/random.css
+++ b/random.css
@@ -16,12 +16,12 @@
 	align-items: center;
 }
 
-.random_form > input{
+/*.random_form > input{
 	background-color: var(--tg-theme-bg-color);
 	color: var(--tg-theme-text-color);
 	margin-top: 1em;
 	margin-bottom: 1em;
-}
+}*/
 .random_form > button{
 	background-color: var(--tg-theme-button-color);
 	color: var(--tg-theme-button-text-color);
