--- a/random.css
+++ b/random.css
@@ -1,14 +1,13 @@
-	html{
-		background-color: var(--tg-theme-bg-color);
-
-	}
-	body{
-		/*font-size: 2em;*/	
-		font-family: var(--bs-font-sans-serif);
-		background-color: var(--tg-theme-bg-color);
-		color: var(--tg-theme-text-color);
-		height: 100%;
-	}	
+html{
+	background-color: var(--tg-theme-bg-color);
+}
+body{
+	/*font-size: 2em;*/	
+	font-family: var(--bs-font-sans-serif);
+	background-color: var(--tg-theme-bg-color);
+	color: var(--tg-theme-text-color);
+	height: 100%;
+}	
 
 .random_form {
 	display: flex;
@@ -16,11 +15,19 @@
 	align-items: center;
 }
 
-.random_form > input{
+.random_form input{
 	background-color: var(--tg-theme-bg-color);
+	color: var(--tg-theme-text-color);
 	margin-top: 1em;
 	margin-bottom: 1em;
 }
+
+input:focus{
+	outline: 0;
+	background-color: var(--tg-theme-bg-color);
+	color: var(--tg-theme-text-color);
+}
+
 .random_form > button{
 	background-color: var(--tg-theme-button-color);
 	color: var(--tg-theme-button-text-color);
