--- a/random.css
+++ b/random.css
@@ -10,6 +10,8 @@ body{
 }	
 
 .random_form {
+	background-color: var(--tg-theme-bg-color);
+	color: var(--tg-theme-text-color);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
