--- a/random.css
+++ b/random.css
@@ -2,7 +2,6 @@ html{
 	background-color: var(--tg-theme-bg-color);
 }
 body{
-	/*font-size: 2em;*/	
 	font-family: var(--bs-font-sans-serif);
 	background-color: var(--tg-theme-bg-color);
 	color: var(--tg-theme-text-color);
@@ -10,8 +9,8 @@ body{
 }	
 
 .random_form {
-	background-color: var(--tg-theme-bg-color);
-	color: var(--tg-theme-text-color);
+	color: var(--tg-theme-bg-color);
+	background-color: var(--tg-theme-text-color);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
