--- a/random.css
+++ b/random.css
@@ -9,8 +9,8 @@ body{
 }	
 
 .random_form {
-	color: var(--tg-theme-bg-color);
-	background-color: var(--tg-theme-text-color);
+	background-color: var(--tg-theme-bg-color);
+	color: var(--tg-theme-text-color);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
