--- a/random.css
+++ b/random.css
@@ -31,9 +31,15 @@
 	}
 
 	.random_form > button{
+		border-radius: 0;
 		background-color: var(--tg-theme-button-color);
 		color: var(--tg-theme-button-text-color);
 		margin-top: 1em;
 		margin-bottom: 1em;
 	}
-
+	.random_form > button:focus{
+		border-radius: 0;
+		outline: 0;
+		background-color: var(--tg-theme-bg-color);
+		color: var(--tg-theme-text-color);
+	}
