--- a/random.css
+++ b/random.css
@@ -2,6 +2,7 @@
 		background-color: var(--tg-theme-bg-color);
 	}
 	body{
+		font-size: 1.8em;
 		font-family: var(--bs-font-sans-serif);
 		background-color: var(--tg-theme-bg-color);
 		color: var(--tg-theme-text-color);
@@ -38,6 +39,13 @@
 		margin-bottom: 1em;
 	}
 	.random_form > button:focus{
+		border-radius: 0;
+		outline: 0;
+		background-color: var(--tg-theme-bg-color);
+		color: var(--tg-theme-text-color);
+	}
+
+	.random_form > button:hover{
 		border-radius: 0;
 		outline: 0;
 		background-color: var(--tg-theme-bg-color);
