--- a/random.css
+++ b/random.css
@@ -2,7 +2,7 @@
 		background-color: var(--tg-theme-bg-color);
 	}
 	body{
-		font-size: 1.8em;
+		font-size: 1.3em;
 		font-family: var(--bs-font-sans-serif);
 		background-color: var(--tg-theme-bg-color);
 		color: var(--tg-theme-text-color);
@@ -31,21 +31,21 @@
 		color: var(--tg-theme-text-color);
 	}
 
-	.random_form > button{
+	#generate{
 		border-radius: 0;
 		background-color: var(--tg-theme-button-color);
 		color: var(--tg-theme-button-text-color);
 		margin-top: 1em;
 		margin-bottom: 1em;
 	}
-	.random_form > button:focus{
+	#generate:focus{
 		border-radius: 0;
 		outline: 0;
 		background-color: var(--tg-theme-bg-color);
 		color: var(--tg-theme-text-color);
 	}
 
-	.random_form > button:hover{
+	#generate:hover{
 		border-radius: 0;
 		outline: 0;
 		background-color: var(--tg-theme-bg-color);
