--- a/random.css
+++ b/random.css
@@ -20,6 +20,7 @@
 	.random_form input{
 		background-color: var(--tg-theme-bg-color);
 		color: var(--tg-theme-text-color);
+		border-style: solid;
 		border-color: var(--tg-theme-text-color);
 		margin-top: 1em;
 		margin-bottom: 1em;
