update buttons style

--- a/passwords.css
+++ b/passwords.css
@@ -23,11 +23,10 @@ body{
 	margin-top:3em; 
 }
 .button{
-	background-color: var(--tg-theme-button-bg-color);
+	background-color: var(--tg-theme-button-color);
 	color: var(--tg-theme-button-text-color);
 	padding: 1em;
 }
 #generate {
 	margin-top:2em; 
 }
-#
