--- a/passwords.css
+++ b/passwords.css
@@ -26,6 +26,7 @@ body{
 	background-color: var(--tg-theme-button-color);
 	color: var(--tg-theme-button-text-color);
 	padding: 1em;
+	user-select: none;
 }
 #generate {
 	margin-top:2em; 
