add password copy button and update buttons styles

--- a/passwords.css
+++ b/passwords.css
@@ -22,12 +22,27 @@ body{
 	justify-content: space-evenly;
 	margin-top:3em; 
 }
+.secure_container{
+	margin-top: 2em;
+	margin-bottom: 2em;
+}
+
+.password_container {
+	width: 70%;
+    margin: 0 auto;
+}
+
 .button{
-	background-color: var(--tg-theme-button-color);
 	color: var(--tg-theme-button-text-color);
 	padding: 1em;
+	border: 2px solid #000;
+	border-radius: 5pt;
 	user-select: none;
 }
 #generate {
-	margin-top:2em; 
+	width: 70%;
+    margin: 0 auto;
+}
+#password {
+	margin-top: 1.5em;
 }
