set buttons border color

--- a/passwords.css
+++ b/passwords.css
@@ -35,7 +35,7 @@ body{
 .button{
 	color: var(--tg-theme-button-text-color);
 	padding: 1em;
-	border: 2px solid #000;
+	border: 2px solid var(--tg-theme-button-text-color);
 	border-radius: 5pt;
 	user-select: none;
 }
